Add electron app and build environment
- Add electon packages
- Add electron-main.js as hook
- Add electron-main.ts config file
  - will automatically be compiled to .js
- Add electron-builder to create packages
- Add electron-builder.json for a maintainable build config
- Heavily optimize builder for angular projects
- Add build instructions to development.rst
- converts OpenSlides as optional electron application
- server switcher on the start page
  - enter some URL, makes it more pretty automatically
  - if the URL changed, reboot and OpenSlides and recall login info
    so the theme should directly apprear on the startpage
- always open links in new tabs
- resolve some django cookie problems to send valid requests as third
  party application
- Custom electron menu elements
  - Most importantly, "force reload" will wipe the local storrage
- Safe the last used server in indexDB
  - this was necessary to have reloading work
  - re-opening the application will enter the last used server for us
    (but no automatic login)
- "help" menu will forward to openslides.com and create issues
- use OpenSlides default theme if no other was found durgin login
  - no more white login page ever
- map file lookup to URL to call mediafiles and projector
- communicate between angular and electron using IPC

BUGS:
 - custom logo does not yet show

TODO:
 - dynamic updates of OpenSlides in Electron
 - dynamic updates of Electron itself

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,22 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>OpenSlides</title>
+        <base href="./" />
 
-<head>
-    <meta charset="utf-8">
-    <title>OpenSlides</title>
-    <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="robots" content="noindex" />
+        <meta name="google" content="notranslate" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+        <link rel="manifest" href="/manifest.json" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    </head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noindex">
-    <meta name="google" content="notranslate">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-    <link rel="manifest" href="/manifest.json" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head>
-
-<body class="general-theme">
-    <os-root></os-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
-
+    <body class="general-theme">
+        <os-root></os-root>
+        <noscript>Please enable JavaScript to continue using this application.</noscript>
+    </body>
 </html>
